bitfields/tests/compile_error_cases/bitfield_invalid_field_ignore_value.stderr
error: Failed to parse the 'ignore' arg 'expected boolean literal', must be either 'true' or 'false'.
 --> tests/compile_error_cases/bitfield_invalid_field_ignore_value.rs:3:1
  |
3 | #[bitfield(u32)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
